# cloud-computing-concepts-1

./: README.md
Assignment1/: Application  CMakeLists.txt  Grader_verbose.sh  Log.cpp  MP1Node.cpp  MP1Node.h  run.sh
